Bug 155690 - FILEOPEN DOCX Bookmark in the first table of a page starts one letter later than in Word
Summary: FILEOPEN DOCX Bookmark in the first table of a page starts one letter later t...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.3.0.4 release
Hardware: All All
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: target:24.2.0 target:7.6.0.0.beta2 ta...
Keywords: bibisected, bisected, regression
Depends on:
Blocks: DOCX-Tables
  Show dependency treegraph
 
Reported: 2023-06-05 16:08 UTC by Gabor Kelemen (Collabora)
Modified: 2023-06-15 06:59 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Example file from Word 2016 (17.26 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2023-06-05 16:08 UTC, Gabor Kelemen (Collabora)
Details
Screenshot of the issue in Word and Writer (112.82 KB, image/png)
2023-06-05 16:09 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2023-06-05 16:08:54 UTC
Created attachment 187734 [details]
Example file from Word 2016

Attached example file contains two tables and some bookmarks inside them.
The first bookmark in the first cell of the first table starts from the second letter instead of the first.

1. Open attached file
-> The top left [Hello World] bookmark in the first table is only [ello World]

Version: 7.6.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: f97a7b965be154824e108802b386e3132b0a237a
CPU threads: 15; OS: Windows 10.0 Build 19045; UI render: default; VCL: win
Locale: en-US (hu_HU); UI: en-US
Calc: threaded

Seems to have started in 4.3 with:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=2e8aad6d45c53d554ccaf26de998ede708cfc289

author	Vinaya Mandke <vinaya.mandke@synerzip.com>	2014-04-18 15:50:51 +0530
committer	Miklos Vajna <vmiklos@collabora.co.uk>	2014-04-24 12:57:51 +0200
commit 2e8aad6d45c53d554ccaf26de998ede708cfc289 (patch)

fdo#39056 fdo#75431 Section Properties if section starts with table
Comment 1 Gabor Kelemen (Collabora) 2023-06-05 16:09:20 UTC
Created attachment 187735 [details]
Screenshot of the issue in Word and Writer
Comment 2 Commit Notification 2023-06-14 14:55:17 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/142aa77265361492e74707b08c5bcd366e7205ad

tdf#155690 writerfilter: fix import of bookmark in table...

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Michael Stahl 2023-06-14 15:14:08 UTC
fixed on master
Comment 4 Commit Notification 2023-06-15 06:59:53 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/b5a50e5bd31303da8c102122b2e0adf3674eee9d

tdf#155690 writerfilter: fix import of bookmark in table...

It will be available in 7.6.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2023-06-15 06:59:56 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/7f9f6fdd6f74d0b9c824a8a0c0384addb5c2ffe6

tdf#155690 writerfilter: fix import of bookmark in table...

It will be available in 7.5.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.